[gd_scene load_steps=5 format=3 uid="uid://db2eirfo2jqy6"]

[ext_resource type="Script" path="res://Scripts/enemy_2.gd" id="1_72ur4"]
[ext_resource type="Texture2D" uid="uid://drl6eog8m0gos" path="res://icon.svg" id="2_h5nfn"]
[ext_resource type="PackedScene" uid="uid://yh027824a26b" path="res://Scenes/killzone.tscn" id="3_uxfa0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fs3il"]
size = Vector2(112, 112)

[node name="Enemy2" type="Node2D"]
script = ExtResource("1_72ur4")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_h5nfn")

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(68, 0)

[node name="RayCast2DLeft" type="RayCast2D" parent="."]
target_position = Vector2(-69, 0)

[node name="Killzone" parent="." instance=ExtResource("3_uxfa0")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
shape = SubResource("RectangleShape2D_fs3il")

[connection signal="body_entered" from="Killzone" to="Killzone" method="_on_body_entered"]
